--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,13 @@
 # Go workspace file
 go.work
 go.work.sum
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+.DS_Store
+.idea
